--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
             <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
         </footer>
 
-       <script src="arafat.m.js"></script>
+       <script src="arafat.ms.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
